# skroll

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .mcp.json  .prettierignore  .prettierrc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tree-sitter-skroll  tree-sitter.config.json  tsconfig.base.json
.github/workflows/: ci.yaml  ci.yml  frontend.yml  rust.yml
.sonarlint/: connectedMode.json
apps/desktop/: babel.config.js  components.json  forge.config.ts  jest.config.ts  jest.setup.ts  jest.tree-sitter-wasm.cjs  jest.web-tree-sitter-wasm.cjs  package.json  playwright.config.ts  postcss.config.js  tailwind.config.ts  tsconfig.json  webpack.main.config.ts  webpack.plugins.ts  webpack.preload.config.ts  webpack.renderer.config.ts  webpack.rules.ts
assets/samples/: bunker.story.json
crates/skroll-lang/: Cargo.toml
crates/skroll-lang/src/: ast.rs  diagnostic.rs  lib.rs  parser.rs  span.rs  tokens.rs
crates/skroll-lang/tests/: lex.rs  smoke.rs
crates/skroll-schema/: Cargo.toml
crates/story-core/: Cargo.toml
docs/: dependency-audit-2025-10.md  rfc-dsl.md  schema.md
examples/: hello.skr  hello.story.json
schemas/: skroll-story-1.0.0.schema.json
scripts/: run-tree-sitter.mjs
src/: App.css  App.tsx  defaultStory.ts  main.tsx  renderer.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  types.rs
src/components/: EditorPane.tsx  (+1 more)
(+74 files in other folders)
