[package]
name = "skroll-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = "0.9"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
once_cell = "1"

story-core = { path = "../story-core" }
skroll-schema = { path = "../skroll-schema" }
